--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" type="image/png" href="/Portfolio/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ICON Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script> <!-- ✔️ Vite will process this on dev server only -->
+    <!-- ✅ DO NOT manually add script tag here. Vite does it after build -->
   </body>
 </html>
