--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ICON Portfolio</title>
-  </head>
+  <head>…</head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <!-- No script tags here—Vite inserts them during build -->
   </body>
 </html>
